--- a/app/src/main/res/drawable/widget_album_art_bg.xml
+++ b/app/src/main/res/drawable/widget_album_art_bg.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" />
-    <solid android:color="#22FFFFFF" />
+    <solid android:color="#2A2A2A" />
 </shape>
