--- a/app/src/main/res/drawable/widget_background.xml
+++ b/app/src/main/res/drawable/widget_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="16dp" />
-    <solid android:color="#CC1A1A1A" />
+    <solid android:color="#1A1A1A" />
     <stroke
         android:width="1dp"
         android:color="#33FFFFFF" />
