Redesign widget based on Backup_Ref classic style - Copy widget_classic.webp preview from Backup_Ref - Restructure layout with left album art, right content - Add TXATranslation integration for multilingual support - Fix background display issue with proper 96dp height - Update widget info XML with keyguard support

--- a/app/src/main/res/xml/widget_txa_music_info.xml
+++ b/app/src/main/res/xml/widget_txa_music_info.xml
@@ -2,13 +2,13 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/widget_txa_music"
     android:minWidth="250dp"
-    android:minHeight="110dp"
+    android:minHeight="96dp"
     android:minResizeWidth="180dp"
     android:minResizeHeight="80dp"
     android:targetCellWidth="4"
-    android:targetCellHeight="3"
+    android:targetCellHeight="2"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen"
-    android:previewImage="@drawable/widget_preview"
+    android:widgetCategory="home_screen|keyguard"
+    android:previewImage="@drawable/widget_classic"
     android:description="@string/widget_description"
     android:updatePeriodMillis="0" />
