Fix classic widget progress bar layout and add 3 new widget styles - Added TXA Classic (4x2) with fixed linear progress - Added TXA Mini (4x1) for compact control - Added TXA Jumbo (4x4) with immersive artwork - Updated widget category and multilingual strings - High-quality preview images for all widget types

--- a/app/src/main/res/xml/widget_txa_music_info.xml
+++ b/app/src/main/res/xml/widget_txa_music_info.xml
@@ -9,6 +9,6 @@
     android:targetCellHeight="2"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen|keyguard"
-    android:previewImage="@drawable/widget_classic"
-    android:description="@string/widget_description"
+    android:previewImage="@drawable/widget_classic_preview"
+    android:description="@string/widget_classic_desc"
     android:updatePeriodMillis="0" />
