--- a/app/src/main/res/drawable/widget_background.xml
+++ b/app/src/main/res/drawable/widget_background.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="16dp" />
-    <solid android:color="#121212" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Dark Glass Background -->
+    <solid android:color="#CC121212" />
+    
+    <!-- Smooth Rounded Corners -->
+    <corners android:radius="24dp" />
+    
+    <!-- Subtle Border (Glass look) -->
+    <stroke
+        android:width="1dp"
+        android:color="#33FFFFFF" />
 </shape>
